--- a/src/app/components/card-container/card-container.component.less
+++ b/src/app/components/card-container/card-container.component.less
@@ -17,7 +17,7 @@
     
                 .card:not(.highlight-card):hover {
                     transform: translateY(-3px);
-                    box-shadow: 0 4px 17px rgba(0, 0, 0, 0.35);
+                    box-shadow: 0 4px 17px var(--main-theme-color);
                 }
     
                 .card:not(.highlight-card):hover .material-icons path {
