--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,5 @@
 <app-toolbar [title]="title"></app-toolbar>
+<app-card-container class="nav-container">
+    <app-card [wSize]="'small'"></app-card>
+</app-card-container>
 <router-outlet></router-outlet>
-{{ 'HELLO' | translate: param }}
