--- a/src/app/components/card/card.component.less
+++ b/src/app/components/card/card.component.less
@@ -2,12 +2,13 @@
     fill: #888;
 }
 
+@themeColor: var(--main-theme-color);
 
 
 .card {
     border-radius: 4px;
-    border: 1px solid #eee;
-    background-color: #fafafa;
+    border: 1px solid @themeColor;
+    background-color: @themeColor;
     height: 40px;
     width: 200px;
     margin: 0 8px 16px;
