fix:修改插件包

--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,1 +1,7 @@
-<lib-ng-marked-editor></lib-ng-marked-editor>
+<lib-ng-marked-editor [option]="option" ></lib-ng-marked-editor>
+
+<div class="right-tips">
+
+</div>
+
+<lib-ng-marked-preview [context]="docContext"></lib-ng-marked-preview>
