--- a/src/styles.less
+++ b/src/styles.less
@@ -1,2 +1,5 @@
 /* You can add global styles to this file, and also import other style files */
 @import './styles/theme/base.less';
+@import './../node_modules/ng-marked-preview/src/styles/theme/default.less';
+@import './../node_modules/ng-marked-preview/src/styles/theme/index.less';
+@import "./../node_modules/highlight.js/styles/atom-one-dark.css";
