--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,12 @@
 <app-toolbar [title]="title"></app-toolbar>
 <app-card-container class="nav-container">
-    <app-card [wSize]="'small'"></app-card>
+    <app-card [wSize]="'small'">
+        <svg t="1636707674270" class="icon" viewBox="0 0 1024 1024" version="1.1" xmlns="http://www.w3.org/2000/svg" p-id="2442" width="24" height="24"><path d="M826.2 942.2h-0.1l-207.5-0.7-0.1-383.5H404.2l2.9 383.5H198c-22.1 0-40-17.9-40-40v-429h40v429h168.8l-2.6-343.2c-0.1-10.7 4-20.9 11.6-28.5 7.6-7.6 17.6-11.8 28.4-11.8h214.3c22 0 40 17.9 40 40l0.1 343.6 167.6 0.5 0.9-430 40 0.1-0.9 430c0 10.7-4.2 20.7-11.8 28.3-7.5 7.5-17.5 11.7-28.2 11.7zM114.8 448.2l400.1-340.6 394.2 340.6h61.1L515.1 54.9l-462 393.3z" p-id="2443" fill="#ffffff"></path></svg>
+        首页</app-card>
+    <app-card [wSize]="'small'">
+        文档</app-card>
+    <app-card [wSize]="'small'">示例</app-card>
+    <app-card [wSize]="'small'">源码</app-card>
+    <app-card [wSize]="'small'">关于</app-card>
 </app-card-container>
 <router-outlet></router-outlet>
