--- a/src/app/app.component.less
+++ b/src/app/app.component.less
@@ -166,3 +166,13 @@ app-card{
   font-weight: 700;
   font-size: 18px;
 }
+
+.main-container{
+  width: 60%;
+  margin-left: 20%;
+  margin-right: 20%;
+}
+
+.svg{
+  width: 24px;
+}
