--- a/src/styles.less
+++ b/src/styles.less
@@ -2,3 +2,4 @@
 @import './styles/theme/base.less';
 @import './../node_modules/ng-marked-preview/src/styles/theme/index.less';
 @import "./../node_modules/highlight.js/styles/atom-one-dark.css";
+@import '~@angular/cdk/overlay-prebuilt.css';
