--- a/src/app/pages/docs/docs.component.html
+++ b/src/app/pages/docs/docs.component.html
@@ -1,1 +1,10 @@
-<p>docs works!</p>
+<section class="docs">
+    <lib-ng-marked-preview #previewElm [context]="docContext"></lib-ng-marked-preview>
+</section>
+<section class="tips">
+    <ul>
+        <li>
+
+        </li>
+    </ul>
+</section>
