--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,1 +1,10 @@
-<lib-ng-marked-editor [option]="option"></lib-ng-marked-editor>
+<section>
+    <div class="toolbars">
+        
+    </div>
+</section>
+<section>
+    <div class="content">
+        <lib-ng-marked-editor [option]="option"></lib-ng-marked-editor>
+    </div>
+</section>
