--- a/src/app/app.component.less
+++ b/src/app/app.component.less
@@ -76,7 +76,7 @@ svg.material-icons:not(:last-child) {
 }
 
 .card.highlight-card {
-  background-color: #1976d2;
+  // background-color: #1976d2;
   color: white;
   font-weight: 600;
   border: none;
@@ -107,12 +107,12 @@ svg#rocket-smoke {
 a,
 a:visited,
 a:hover {
-  color: #1976d2;
+  // color: #1976d2;
   text-decoration: none;
 }
 
 a:hover {
-  color: #125699;
+  // color: #125699;
 }
 
 svg#clouds {
@@ -125,7 +125,7 @@ svg#clouds {
 
 pre {
   font-family: SFMono-Regular, Consolas, Liberation Mono, Menlo, monospace;
-  color: white;
+  // color: rgb(252, 241, 241);
   padding: 0 1rem 1rem;
   margin: 0;
 }
@@ -162,7 +162,7 @@ pre {
 }
 
 app-card{
-  color: #fff;
+  color: var(--main-font-color);
   font-weight: 700;
   font-size: 18px;
 }
