--- a/src/app/layout/toolbar/toolbar.component.less
+++ b/src/app/layout/toolbar/toolbar.component.less
@@ -6,7 +6,7 @@
     display: flex;
     align-items: center;
     background-color: var(--main-theme-color);
-    color: white;
+    color: var(--main-font-color);
     font-weight: 600;
 }
 
@@ -38,6 +38,5 @@
 }
 
 .i18 {
-    color: #fff;
     cursor: pointer;
 }
