--- a/src/styles/var.css
+++ b/src/styles/var.css
@@ -1,3 +1,5 @@
 :root{
-    --main-theme-color: #1976d2
+    --main-theme-color: #1976d2;
+    --main-font-color: #fff;
+    --main-back-color: #fff;
 }
