--- a/src/app/pages/source-code/source-code.component.html
+++ b/src/app/pages/source-code/source-code.component.html
@@ -1,1 +1,10 @@
-<p>source-code works!</p>
+<section>
+    <div class="toolbars">
+        
+    </div>
+</section>
+<section>
+    <div class="content">
+        <lib-ng-marked-preview [context]="docContext"></lib-ng-marked-preview>
+    </div>
+</section>
