--- a/src/styles.less
+++ b/src/styles.less
@@ -2,3 +2,11 @@
 @import './styles/theme/base.less';
 @import './../node_modules/ng-marked-preview/src/styles/theme/index.less';
 @import '~@angular/cdk/overlay-prebuilt.css';
+
+body {
+    transition: all 1s ease-in-out;
+    // background: var(--main-back-color);
+}
+table{
+    border-collapse: collapse;
+}
