--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,7 +1,7 @@
 <section>
     <div class="toolbars">
         <span class="tool-bar" (click)="switchTheme('dark')">
-            暗黑主题
+            深色主题
         </span>
         &nbsp;
         <span class="tool-bar" (click)="switchTheme('default')">
